<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_changeStatus"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/statusLabel"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_shareLocation"
            android:icon="@drawable/ic_location_on"
            android:title="@string/shareLocationOnTitle"
            android:checkable="false"/>

    </group>

    <item android:title="@string/settingsTitle">
        <menu>
            <item
                android:title="@string/logout"
                android:id="@+id/nav_signOutButton"
                android:icon="@drawable/com_facebook_button_login_logo"/>
        </menu>
    </item>

</menu>
