<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marcusjakobsson.gadr.AddEventActivity"
    android:gravity="center_horizontal">


    <EditText
        android:id="@+id/EditText_Title"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/AddEvent_title"
        android:inputType="textPersonName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/EditText_Description"
        android:layout_width="366dp"
        android:layout_height="142dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/AddEvent_Description"
        android:inputType="textMultiLine"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/EditText_Date"
        android:layout_width="366dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/AddEvent_Date"
        android:inputType="textPersonName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <EditText
        android:id="@+id/EditText_StartTime"
        android:layout_width="366dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/AddEvent_StartTime"
        android:inputType="textPersonName"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/EditText_EndTime"
        android:layout_width="366dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/AddEvent_EndTime"
        android:inputType="textPersonName"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <EditText
        android:id="@+id/EditText_Location"
        android:layout_width="366dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/AddEvent_Location"
        android:inputType="textPersonName"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <Button
        android:id="@+id/Button_AddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="addEvent"
        android:text="Button"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</LinearLayout>
